frontend/src/custom.scss
@import "~bootstrap/scss/bootstrap";

// Small tablets and large smartphones (landscape view)
$screen-sm-min: 576px;

// Small tablets (portrait view)
$screen-md-min: 768px;

// Tablets and small desktops
$screen-lg-min: 992px;

// Large tablets and desktops
$screen-xl-min: 1200px;

@mixin sm {
    @media (min-width: #{$screen-sm-min}) {
      @content;
    }
  }
  
  // Medium devices
@mixin md {
    @media (min-width: #{$screen-md-min}) {
      @content;
    }
  }
  
  // Large devices
@mixin lg {
    @media (min-width: #{$screen-lg-min}) {
      @content;
    }
  }
  
  // Extra large devices
@mixin xl {
    @media (min-width: #{$screen-xl-min}) {
      @content;
    }
  }

// Fonts

@font-face {
  font-family: 'inter';
  src: url('./fonts/Inter-VariableFont_slnt\,wght.ttf');
  font-weight: normal;
  font-style: normal
}
  

//   Colors
$white: #fff;
$black: #000;
$very-dark-blue: #0B1C2C;
$very-light-green: #00FF4E5D;
$light-purple: #2700FF6A;
$sky-blue: #76FFF415;
$medium-blue: #1B3E60;
$forest-green: #076F38;
$dark-blue: #112F4D;
$gray: #00000029;
$off-white: #FFFFFF19;

* {
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, p {
  color: $white;
  font-family: "inter", sans-serif;
  text-transform: none;
  margin: 0;
}

.container-fluid {
  padding: 0;
  margin: 0;
}

body {
    height: 100%;
    font-family: "Helvetica", sans-serif;
    
    background: $very-dark-blue
}

.main-body-container {
  padding-left: 2.3rem;
  padding-right: 2.3rem;
}

.view-project {
  font-family: pt-mono,monospace;
  font-weight: 700;
  font-style: normal;
  margin-bottom: 0;
  position: relative;
  
  .line-through-work, .view-all-line, .projects-line {
    height: 8px;
    // width: 80%;
    left: 0;
    right: 5%;
    background-color: rgba(7,111,56, 0.8);
    position: absolute;
    bottom: 10%;
  }
  
}

hr {
  border-top: 2px solid $white;
}

// Navbar

.navbar-main {

  height: 6rem;

  .navbar-left {
    width: 30%;
  }
  
  .navbar-right {
    width: 70%;

    p {
      font-weight: bold;
    }
  }
  
}

// Main Page

.main-title-container {

  // Title Text

  .main-title{
    font-family: 'inter', sans-serif;
    font-weight: bold;
    font-size: 1.4rem;
    line-height: 200%;
    text-align: center;

    .text-line-conductor, .text-line-streamer {
      display: inline-block;
      position: relative;
    }
  }

}

.line-through-conductor {
  height: 5px;
  // width: 80%;
  background-color: rgba(163,255,191, 0.7);
  position: absolute;
  bottom: 35%;
  left: 0;
  right: 10%;
}

.line-through-streamer {
  height: 5px;
  // width: 80%;
  left: 0;
  right: 10%;
  background-color: rgba(164,148,255, 0.7);
  position: absolute;
  bottom: 35%;
}

// Headphones

.headphone-spacer {
  height: 425px;
}

.headphones-container {

  position: relative;

  .headphones-image {
    position: absolute;
    left: 50%;
    transform: translateX(-63%)
  }
}

// About me

.about-me-container {
  .about-me-text {
    line-height: 200%;
  }
}

// View Work

.view-work-container {

  margin-top: 1.5rem;

  margin-bottom: 4rem;

  .view-work-button {
    background-color: transparent;
    border: none;
    padding: 0;
    font-size: 1.4rem;
    letter-spacing: .3rem;
    position: relative;

    .line-through-work {
      height: 8px;
      // width: 80%;
      left: 0;
      right: 5%;
      background-color: rgba(7,111,56, 0.8);
      position: absolute;
      bottom: 10%;
    }
  }


}

.featured-projects-text {
  position: relative;
    .underline-full-width {
      height: 1px;
      background-color: #fff;
      position: absolute;
      left: -20%;
      right: -20%;
      bottom: 20%;
    }
}

.concert-builder-container, .orchesnation-container, .mars-rover-container {


  h4 {
    font-weight: bold;
    margin-top: 3rem;
    margin-bottom: 1rem;
  }

  p {
    font-size: 1.2rem;
    line-height: 2rem;
    margin-bottom: 2rem;
  }
}

.view-projects-selector {
  margin-bottom: 4rem;

  .view-project {
    font-size: 1.4rem;
    width: 50%;
  }
}

.view-project-button {

  margin-top: 2rem;

  .view-project {
    margin-bottom: 0;
  }
}

.projects-tags-container{
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.project-tag {
  height: 2rem;
  border-radius: 25px;
  background-color: #FFFFFF19;
  color: $white;
  display: block;
  font-family: pt-mono,monospace;
  font-weight: 400;
  font-style: normal;
  margin-bottom: 0;
  outline: none;
  border: none;
  margin-top: 1rem;
  transition: none !important
}

.project-tag:active {
  color: $white;
  background-color: #FFFFFF19 !important;
  border-color: none !important;
  outline: none !important;
  box-shadow: none !important
}

.project-tag:focus {
  color: $white;
  background-color: #FFFFFF19 !important;
  border-color: none !important;
  outline: none !important;
  box-shadow: none !important
}

.concert-builder-image, .orches-nation-image, .mars-rover-image {
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
}

.view-all-projects-container {
  position: relative;

  .can-image {
    position: absolute;
    bottom: 0;
    top: 0;
    left: -10%;
  }

}

// Get in Touch
.get-in-touch-container {
    p {
      text-align: center;
      line-height: 2.3rem;
    }

    p:first-of-type {
      margin-bottom: 2rem;
    }

    .view-project {
      margin-top: 3rem;
      font-size: 1.7rem;
      letter-spacing: .4rem;

      margin-bottom: 6rem;
    }
}

// Footer

.footer-container {
  margin: 0;
  padding-top: 5rem;
  padding-bottom: 2rem;
  background-color: $black;

  .follow-container {
    margin-bottom: 4rem;
  }

  .social-icons {
    margin-bottom: 6rem;
  }

}

.copyright-container {
  p {
    font-size: .6rem;
  }
}

